--- a/Tutorial 1-Intro to Spark.ipynb
+++ b/Tutorial 1-Intro to Spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "481cd50c",
    "metadata": {},
    "outputs": [
@@ -10,19 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pyspark\n",
-      "  Downloading pyspark-3.3.1.tar.gz (281.4 MB)\n",
-      "Collecting py4j==0.10.9.5\n",
-      "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
-      "Building wheels for collected packages: pyspark\n",
-      "  Building wheel for pyspark (setup.py): started\n",
-      "  Building wheel for pyspark (setup.py): still running...\n",
-      "  Building wheel for pyspark (setup.py): finished with status 'done'\n",
-      "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845515 sha256=2023ec69d28566caa2f09d2289eb969dd6ffaac626386b478eaa5bafeeaf3ed1\n",
-      "  Stored in directory: c:\\users\\jittabun\\appdata\\local\\pip\\cache\\wheels\\43\\dc\\11\\ec201cd671da62fa9c5cc77078235e40722170ceba231d7598\n",
-      "Successfully built pyspark\n",
-      "Installing collected packages: py4j, pyspark\n",
-      "Successfully installed py4j-0.10.9.5 pyspark-3.3.1\n"
+      "Requirement already satisfied: pyspark in c:\\users\\jittabun\\anaconda3\\lib\\site-packages (3.3.1)\n",
+      "Requirement already satisfied: py4j==0.10.9.5 in c:\\users\\jittabun\\anaconda3\\lib\\site-packages (from pyspark) (0.10.9.5)\n"
      ]
     }
    ],
@@ -32,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "08717dec",
    "metadata": {},
    "outputs": [],
@@ -42,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "id": "ca6a0d2e",
    "metadata": {},
    "outputs": [],
@@ -53,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "a8f3aaf0",
    "metadata": {},
    "outputs": [],
@@ -63,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "3cd25996",
    "metadata": {},
    "outputs": [],
@@ -73,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "8545ca25",
    "metadata": {},
    "outputs": [
@@ -106,7 +95,7 @@
        "<pyspark.sql.session.SparkSession at 0x25d5280d610>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,27 +106,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 38,
    "id": "aed26827",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pyspark = spark.read.csv('Book1.csv')"
+    "df_pyspark = spark.read.csv('test1.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "id": "2244a4f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pyspark = spark.read.option('header','true').csv('Book1.csv')"
+    "df_pyspark = spark.read.option('header','true').csv('test1.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "90f3ece6",
    "metadata": {},
    "outputs": [
@@ -147,7 +136,7 @@
        "pyspark.sql.dataframe.DataFrame"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,19 +147,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "id": "d0df6802",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Row(Name ='Krish', age='31'),\n",
-       " Row(Name ='Sudhansh', age='30'),\n",
-       " Row(Name ='Sunny', age='29')]"
+       "[Row(Name='Krish', age='31', Experience='10'),\n",
+       " Row(Name='Sudhansh', age='30', Experience='8'),\n",
+       " Row(Name='Sunny', age='29', Experience='4')]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "id": "4b9b71ae",
    "metadata": {},
    "outputs": [
@@ -190,8 +179,9 @@
      "output_type": "stream",
      "text": [
       "root\n",
-      " |-- Name : string (nullable = true)\n",
+      " |-- Name: string (nullable = true)\n",
       " |-- age: string (nullable = true)\n",
+      " |-- Experience: string (nullable = true)\n",
       "\n"
      ]
     }
@@ -202,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "id": "69e22623",
    "metadata": {},
    "outputs": [
@@ -266,7 +256,7 @@
        "2     Sunny   29           4            6"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
