--- a/Tutorial 2 - PySparkDataFrames- Part 1'.ipynb
+++ b/Tutorial 2 - PySparkDataFrames- Part 1'.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 87,
    "id": "aca97318",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 88,
    "id": "fb5a4c26",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 89,
    "id": "5b36807d",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "<pyspark.sql.session.SparkSession at 0x22e451e6910>"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,18 +66,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 90,
    "id": "2429248a",
    "metadata": {},
    "outputs": [],
    "source": [
     "## read the dataset\n",
-    "df_pyspark = spark.read.option('header','true').csv('Book1.csv',inferSchema = True)"
+    "df_pyspark = spark.read.option('header','true').csv('test1.csv',inferSchema = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 91,
    "id": "b56e298c",
    "metadata": {},
    "outputs": [
@@ -89,6 +89,7 @@
       " |-- Name: string (nullable = true)\n",
       " |-- age: integer (nullable = true)\n",
       " |-- Experience: integer (nullable = true)\n",
+      " |-- Salary: integer (nullable = true)\n",
       "\n"
      ]
     }
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 92,
    "id": "c857ceaf",
    "metadata": {},
    "outputs": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 93,
    "id": "ab40d8a8",
    "metadata": {},
    "outputs": [
@@ -136,7 +137,7 @@
        "pyspark.sql.dataframe.DataFrame"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 94,
    "id": "ca716191",
    "metadata": {},
    "outputs": [
@@ -157,7 +158,7 @@
        "['Name', 'age', 'Experience']"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 95,
    "id": "6386e2ae",
    "metadata": {},
    "outputs": [
@@ -180,7 +181,7 @@
        " Row(Name='Sunny', age=29, Experience=4)]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 96,
    "id": "31d1087a",
    "metadata": {},
    "outputs": [
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 97,
    "id": "9a23657a",
    "metadata": {},
    "outputs": [
@@ -226,7 +227,7 @@
        "pyspark.sql.dataframe.DataFrame"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 98,
    "id": "5cbb7503",
    "metadata": {},
    "outputs": [
@@ -262,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 99,
    "id": "db8a8e57",
    "metadata": {},
    "outputs": [
@@ -272,7 +273,7 @@
        "[('Name', 'string'), ('age', 'int'), ('Experience', 'int')]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 100,
    "id": "ed9886a9",
    "metadata": {},
    "outputs": [
@@ -310,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 101,
    "id": "8a494088",
    "metadata": {},
    "outputs": [],
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 102,
    "id": "5d2070d6",
    "metadata": {},
    "outputs": [
@@ -346,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 103,
    "id": "d9374a49",
    "metadata": {},
    "outputs": [
@@ -356,7 +357,7 @@
        "DataFrame[Name: string, age: int, Experience: int]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 104,
    "id": "8d8c0b9c",
    "metadata": {},
    "outputs": [
